# Macrobrain

./: CHATGPTPROTOCOL_BOOTSTRAP.txt  initialization.sh  pyproject.toml
.github/workflows/: fsm_audit.yml  fsm_audit_enforced.yml
src/onemind/macrobrain/: __init__.py  subsystem.py
tests_hermetic/: test_smoke.py  test_tierB.py  test_tierC.py
